remove git's depth parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-os:         linux
-dist:       xenial
+os:      linux
+dist:    xenial
+git:
+  depth: false
 script:
-        - bash comp_version.sh
-        - bash broken_links.sh 
+  - bash comp_version.sh
+  - bash broken_links.sh
